Add JAVA_OPTION for JDK 17
Needed for detail view portal